Adding alert options for filtering item menu

--- a/app/src/main/res/menu/menu_deslogged.xml
+++ b/app/src/main/res/menu/menu_deslogged.xml
@@ -5,15 +5,15 @@
     tools:context=".view.MainActivity">
 
     <item
-        android:id="@+id/action_reorder"
-        android:title="@string/action_reorder"
+        android:id="@+id/action_profile"
+        android:title="@string/action_profile"
         android:icon="@drawable/reorder"
         app:showAsAction="always"
         android:orderInCategory="1">
     </item>
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_filtering"
         android:title="@string/action_settings"
         android:icon="@drawable/filtering"
         app:showAsAction="always"
