--- a/app/src/main/res/layout/item_view_bill.xml
+++ b/app/src/main/res/layout/item_view_bill.xml
@@ -1,9 +1,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:background="@drawable/background">
+    android:layout_height="wrap_content"
+    android:orientation = "vertical"
+    android:layout_marginBottom="1dp"
+    android:layout_marginTop="1dp"
+    >
 
 
     <android.support.v7.widget.CardView
