--- a/app/src/main/res/menu/menu_deslogged.xml
+++ b/app/src/main/res/menu/menu_deslogged.xml
@@ -13,11 +13,19 @@
     </item>
 
     <item
-        android:id="@+id/action_filtering"
+        android:id="@+id/action_settigs"
         android:title="@string/action_settings"
-        android:icon="@drawable/filtering"
+        android:icon="@drawable/settings"
         app:showAsAction="always"
-        android:orderInCategory="2">
+        android:orderInCategory="3">
+        <menu>
+            <item
+                android:id="@+id/action_filtering"
+                app:showAsAction="always"
+                android:orderInCategory="1"
+                android:title="@string/action_filtering">
+            </item>
+        </menu>
     </item>
 
     <item
@@ -25,7 +33,7 @@
         android:title="@string/action_search"
         android:icon="@drawable/search"
         app:showAsAction="always"
-        android:orderInCategory="4">
+        android:orderInCategory="2">
     </item>
 
 </menu>
