Adding number of proposals in card view

--- a/app/src/main/res/layout/card_bill.xml
+++ b/app/src/main/res/layout/card_bill.xml
@@ -37,15 +37,35 @@
                 android:id="@+id/bill_title"
                 android:layout_toRightOf="@+id/theme_photo"
                 android:layout_alignParentTop="true"
-                android:textSize="30sp"
+                android:textSize="25sp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/bill_description"
+                android:layout_toRightOf="@+id/theme_photo"
+                android:layout_below="@+id/bill_title"
                 />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/bill_description"
+                android:id="@+id/text_proposal"
                 android:layout_toRightOf="@+id/theme_photo"
-                android:layout_below="@+id/bill_title"
+                android:layout_below="@+id/bill_description"
+                android:text="Propostas: "
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/bill_number_proposal"
+                android:layout_toRightOf="@+id/text_proposal"
+                android:layout_below="@+id/bill_description"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 />
 
         </RelativeLayout>
