--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/content_panel"
-    tools:context=".view.RegisterUserActivity"
+    tools:context=".view.LoginActivity"
     android:background="@drawable/background">
 
 </android.support.design.widget.CoordinatorLayout>
