--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#b3f8ee"
+        android:background="#83c6c6c6"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -31,7 +31,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:checked="false" />
+            android:checked="false"
+            android:background="#00ffffff" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,7 +42,7 @@
             android:id="@+id/textViewRecentes"
             android:layout_alignTop="@+id/switchRelevanteRecente"
             android:layout_toEndOf="@+id/switchRelevanteRecente"
-            android:textColor="@color/background_floating_material_dark" />
+            android:textColor="@color/abc_secondary_text_material_dark" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -53,7 +54,8 @@
             android:layout_column="4"
             android:layout_alignParentTop="true"
             android:layout_toStartOf="@+id/switchRelevanteRecente"
-            android:textColor="@color/background_floating_material_dark" />
+            android:textColor="@color/abc_secondary_text_material_dark"
+            android:textColorHint="#ffffff" />
 
     </RelativeLayout>
 
@@ -62,7 +64,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/Abertos"
         android:layout_below="@+id/relativeLayout"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="#00ffffff">
 
         <Switch
             android:layout_width="50dp"
@@ -72,7 +75,8 @@
             android:layout_centerHorizontal="true"
             android:checked="false"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:textColor="#ffffff" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,7 +86,7 @@
             android:id="@+id/textViewEncerrados"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/switchAbertoFechado"
-            android:textColor="@color/background_floating_material_dark" />
+            android:textColor="@color/abc_secondary_text_material_dark" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -95,7 +99,7 @@
             android:layout_alignTop="@+id/textViewEncerrados"
             android:layout_toStartOf="@+id/switchAbertoFechado"
             android:layout_marginTop="12dp"
-            android:textColor="@color/background_floating_material_dark" />
+            android:textColor="@color/abc_secondary_text_material_dark" />
 
     </RelativeLayout>
 
