--- a/app/src/main/res/layout/fragment_register_user.xml
+++ b/app/src/main/res/layout/fragment_register_user.xml
@@ -17,7 +17,10 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"
-        android:hint="Nome"/>
+        android:hint="Nome"
+        android:backgroundTint="#FAFAFA"
+        android:textColorHint="#FAFAFA"
+        android:textColor="#FFFFFF" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -27,7 +30,11 @@
         android:id="@+id/lastNameField"
         android:layout_below="@+id/firstNameField"
         android:layout_centerHorizontal="true"
-        android:hint="Sobrenome"/>
+        android:hint="Sobrenome"
+        android:backgroundTint="#FAFAFA"
+        android:textColorHint="#FAFAFA"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -37,7 +44,11 @@
         android:id="@+id/emailField"
         android:layout_below="@+id/lastNameField"
         android:layout_centerHorizontal="true"
-        android:hint="E-mail"/>/>
+        android:hint="E-mail"
+        android:backgroundTint="#FAFAFA"
+        android:textColorHint="#FAFAFA"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material" />/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -47,7 +58,11 @@
         android:id="@+id/passwordField"
         android:layout_below="@+id/emailField"
         android:layout_centerHorizontal="true"
-        android:hint="Senha"/>
+        android:hint="Senha"
+        android:backgroundTint="#FAFAFA"
+        android:textColorHint="#FAFAFA"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material" />
     />
 
     <EditText
@@ -56,30 +71,37 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/passwordConfirmationField"
+        android:hint="Confirmação de senha"
+        android:textColorHint="#FAFAFA"
+        android:textColor="#FAFAFA"
+        android:backgroundTint="#FAFAFA"
         android:layout_below="@+id/passwordField"
-        android:layout_centerHorizontal="true"
-        android:hint="Confirmação de senha"/>/>
+        android:layout_toEndOf="@+id/imageViewPasswordUser"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentBottom="false"
+        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material" />/>
 
     <Button
         android:layout_width="300px"
         android:layout_height="wrap_content"
         android:text="Cadastrar"
         android:id="@+id/registerButton"
-        android:layout_below="@+id/passwordConfirmationField"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="66dp"
         android:singleLine="false"
         android:nestedScrollingEnabled="true"
         android:focusable="false"
         android:clickable="false"
-        android:background="#009688"
-        android:textColor="#ffffff"
-        android:textSize="14dp"/>
+        android:background="#b2b2b2"
+        android:textColor="#070707"
+        android:textSize="14dp"
+        android:layout_below="@+id/passwordConfirmationField"
+        android:layout_centerHorizontal="true"
+        android:allowUndo="false" />
 
     <ImageView
         android:layout_width="200px"
         android:layout_height="200px"
-        android:src="@drawable/logo_black"
+        android:src="@drawable/logo_white"
         android:id="@+id/imageViewLogo"
         android:layout_marginTop="39dp"
         android:layout_alignParentTop="true"
@@ -88,7 +110,7 @@
     <ImageView
         android:layout_width="60px"
         android:layout_height="60px"
-        android:src="@drawable/user_name"
+        android:src="@drawable/user_name1"
         android:id="@+id/imageViewUserName"
         android:layout_alignTop="@+id/firstNameField"
         android:layout_toStartOf="@+id/firstNameField"
@@ -97,7 +119,7 @@
     <ImageView
         android:layout_width="60px"
         android:layout_height="60px"
-        android:src="@drawable/user_name"
+        android:src="@drawable/user_name1"
         android:id="@+id/imageViewLastName"
         android:layout_alignTop="@+id/lastNameField"
         android:layout_toStartOf="@+id/lastNameField"
@@ -106,7 +128,7 @@
     <ImageView
         android:layout_width="60px"
         android:layout_height="60px"
-        android:src="@drawable/email_user"
+        android:src="@drawable/email_user1"
         android:id="@+id/imageViewEmailUser"
         android:layout_alignBottom="@+id/emailField"
         android:layout_below="@+id/lastNameField"
@@ -115,7 +137,7 @@
     <ImageView
         android:layout_width="60px"
         android:layout_height="60px"
-        android:src="@drawable/password_user"
+        android:src="@drawable/password_user1"
         android:id="@+id/imageViewPasswordUser"
         android:layout_alignTop="@+id/passwordField"
         android:layout_toStartOf="@+id/passwordField"
@@ -124,7 +146,7 @@
     <ImageView
         android:layout_width="60px"
         android:layout_height="60px"
-        android:src="@drawable/password_user"
+        android:src="@drawable/password_user1"
         android:id="@+id/imageViewConfirmationPasswotd"
         android:layout_alignBottom="@+id/passwordConfirmationField"
         android:layout_toStartOf="@+id/passwordConfirmationField"
